--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "Hey, this is Mickey."
+description: "Hey, this is Code Career Land."
 header-img: "img/contact-bg.jpg"
 ---
 
