--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,7 +13,13 @@ layout: default
 		<link rel="stylesheet" type="text/css" href="css/timeline.css" />
 		<script src="js/modernizr.custom.js"></script>
 	</head>
+
+	
+
 	<body>
+		<!-- <div style="background-image: url(/portfolio/images/bg-sql.png); background-size: cover;;height:540px;
+		"></div> -->
+
 		<div class="container" style="margin:0;padding:0;width:100%;">
 			<header>
 				<img width="175" height="175" style="border-radius:50%;" src="/img/2.jpg">
