protfolio-bg-css

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -23,7 +23,8 @@ layout: default
 		<div class="container" style="margin:0;padding:0;width:100%;">
 			<header>
 				<img width="175" height="175" style="border-radius:50%;" src="/img/2.jpg">
-				<h2>xpengkang</h2>
+				<!-- <img width="175" height="175" style="top-left;" src="/img/2.jpg"> -->
+				<h2>xpk</h2>
 				<p>A student major in nanotechnology,<br>
 					teach himself computer science</p>
 			</header>
