--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-description: "你来到了没有知识的荒原 :("
+<!-- description: "你来到了没有知识的荒原 :(" -->
 header-img: "img/404-bg.jpg"
 permalink: /404.html
 ---
@@ -12,8 +12,8 @@ permalink: /404.html
 		<div class="row">
 			<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 				<div class="site-heading" id="tag-heading">
-					<h1>404</h1>
-					<span class="subheading">{{ page.description }}</span>
+					<!-- <h1>404</h1> -->
+					<!-- <span class="subheading">{{ page.description }}</span> -->
 				</div>
 			</div>
 		</div>
