--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -20,8 +20,8 @@ layout: default
 		<!-- <div style="background-image: url(/portfolio/images/bg-sql.png); background-size: cover;;height:540px;
 		"></div> -->
 
-		<div class="container" style="margin:0;padding:0;width:100%; background-color: bisque;">
-			<header>
+		<div class="container" style="margin:0;padding:0;width:100%; ">
+			<header style="background-color: bisque;">
 				<img width="175" height="175" style="border-radius:50%;" src="/img/2.jpg">
 				<!-- <img width="175" height="175" style="top-left;" src="/img/2.jpg"> -->
 				<h2>xpk</h2>
