update about me

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -24,7 +24,7 @@ layout: default
 			<header style="background-color: bisque;">
 				<img width="175" height="175" style="border-radius:50%;" src="/img/2.jpg">
 				<!-- <img width="175" height="175" style="top-left;" src="/img/2.jpg"> -->
-				<h2>xpk</h2>
+				<h2>Xpengkang</h2>
 				<p>A student major in nanotechnology,<br>
 					teach himself computer science</p>
 			</header>
