--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Xpengkang"
+description: "“颠簸于批判主义的无边波浪之中，我们需要寻找一块陆地建构自己的理想。”"
 ---
 
 {% for post in paginator.posts %}
